fix: fix overflow-x"

--- a/pages/style.css
+++ b/pages/style.css
@@ -440,6 +440,7 @@
 
    main {
      padding: 0 20px;
+     overflow-x: hidden;
    }
    .navigation-menu{
     display: none;
